force-app/main/default/objects/OpportunityHistory__c/OpportunityHistory__c.object-meta.xml
<CustomObject>
    <label>OpportunityHistory</label>
    <nameField>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpportunityHistories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>