force-app/main/default/objects/OpportunityHistory__c/fields/Edited_by__c.field-meta.xml
<CustomField>
    <fullName>Edited_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edited by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunityHistories</relationshipName>
    <type>Lookup</type>
</CustomField>